# rust-data-logger-v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.docker.toml  config.toml  correct_response.json  debug-workflow.js  docker-compose.yml  simple_test.csv  test-auto-enable.js  test-browser-workflow.js  test-tag-template-fix.js  test-updated-behavior.js  test-view-details-bug-fix.js  test-view-details-fix.js  test_f32_types.csv  test_invalid.csv  test_invalid_type.csv  test_powermeter.csv  test_powermeter_valid.csv  test_tags.csv  test_tags_correct.csv  test_validation.csv
data/: RT1.csv  SG1000B.csv  SG125CX-P2.csv  SG150CX.csv  SG20RT.csv  Sungrow SG150CX.csv  UMG604.csv  table_(5).csv
src/: api.rs  api_additions.rs  api_additions_import.rs  config.rs  csv_parser.rs  database.rs  database_additions.rs  iec104.rs  lib.rs  logging.rs  main.rs  modbus.rs  tb_rust_client.rs  websocket.rs
tests/: db_test.rs  tb_client_test.rs
web/: package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.js  index.css
web/src/components/: Dashboard.js  DataLogs.js  DeviceConfig.js  DeviceModelBrowser.js  EnhancedDeviceConfig.js  Login.js  PlantConfig.js  ScheduleGroupConfig.js  SystemConfig.js
web/src/contexts/: AuthContext.js
